--- a/web.html
+++ b/web.html
@@ -15,7 +15,7 @@
 <link rel="Stylesheet" href="CSS/wzbkxq.css" type="text/css"/>
 <link rel="Stylesheet" href="CSS/BK2.css" type="text/css"/>
 
-
+<meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no" /> 
 
 
 </head>
