--- a/web.html
+++ b/web.html
@@ -12,6 +12,8 @@
 <link rel="Stylesheet" href="CSS/WZB3.css" type="text/css"/>
 <link rel="Stylesheet" href="CSS/WZB4.css" type="text/css"/>
 <link rel="Stylesheet" href="CSS/WZB5.css" type="text/css"/>
+<link rel="Stylesheet" href="CSS/WZB6.css" type="text/css"/>
+<link rel="Stylesheet" href="CSS/WZB7.css" type="text/css"/>
 <link rel="Stylesheet" href="CSS/wzbkxq.css" type="text/css"/>
 <link rel="Stylesheet" href="CSS/BK2.css" type="text/css"/>
 
@@ -64,6 +66,16 @@
 			<div class='p'>
 			    <div class="wzb5">
 	                <div style="font-family:index;color:PaleVioletRed;font-size:120%;text-align:center;"><a href="mz.html" style="text-decoration:none;color:PaleVioletRed" target="_blank">3.盲注</a></div>
+                </div>
+			</div>
+			<div class='p'>
+			  <div class="wzb6">
+                <div style="font-family:index;margin-top:-140px;color:PaleVioletRed;font-size:350%;text-align:center;">XSS</div>
+			  </div>
+            </div>
+			<div class='p'>
+			    <div class="wzb7">
+	                <div style="font-family:index;color:PaleVioletRed;font-size:120%;text-align:center;"><a href="XSS1.html" style="text-decoration:none;color:PaleVioletRed" target="_blank">1.XSS学习笔记（一）</a></div>
                 </div>
 			</div>
         </div>
