--- a/XSS1.html
+++ b/XSS1.html
@@ -7,6 +7,7 @@
 
 <link rel="Stylesheet" href="ZT.css" type="text/css"/>
 <link rel="Stylesheet" href="BKd1.css" type="text/css"/>
+<link rel="Stylesheet" href="CSS/wzbkxq.css" type="text/css"/>
 
 
 </head>
@@ -19,6 +20,7 @@ background="D1.jpg"
     background-attachment: fixed;
     margin:0px ">
 
+<div class="p">
 <div class="zt1">
 <div>XSS学习笔记(一)</div>
 </div>
@@ -56,7 +58,7 @@ background="D1.jpg"
 <div style="text-align:center;font-size:2em;">XSS芝士QWQ</div>
 <br/>
 <div>
-1.&lt;script&gt;talert("XSS")&lt;/script&gt;--->输入进行测试
+1.&lt;script&gt;alert("XSS")&lt;/script&gt;--->输入进行测试
 </pre>
 </div>
 <br/>
@@ -99,6 +101,12 @@ background="D1.jpg"
 <div style="text-align: center;font-size: 2em;color:Tomato">IT IS A LONG WAY TO LEARN</div>
 </div>
 </div>
+</div>
+
+<script src="https://cdn.jsdelivr.net/npm/jquery/dist/jquery.min.js"></script>
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/font-awesome/css/font-awesome.min.css"/>
+<script src="JS/autoload.js"></script>
+
 </body>
 </html>
 
