--- a/XSS1.html
+++ b/XSS1.html
@@ -58,6 +58,7 @@ background="D1.jpg"
 <div style="text-align:center;font-size:2em;">XSS芝士QWQ</div>
 <br/>
 <div>
+<pre>
 1.&lt;script&gt;alert("XSS")&lt;/script&gt;--->输入进行测试
 </pre>
 </div>
