--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
     <div class="bk1">
        <div class="wz7">
 	        <div class='p'>
-                <div style="font-family:index;color:PaleVioletRed;font-size:1300%;text-align:center;"><a href="http://www.w3school.com.cn" style="text-decoration:none;color:PaleVioletRed" target="_blank">TOOL</a></div>
+                <div style="font-family:index;color:PaleVioletRed;font-size:1300%;text-align:center;"><a href="tool.html" style="text-decoration:none;color:PaleVioletRed" target="_blank">TOOL</a></div>
 			</div>
        </div>
     </div>
