--- a/tool.html
+++ b/tool.html
@@ -26,8 +26,12 @@
 <div class="wzc1">
     <div class='p'>
         <div style="font-family:index;margin-top:-140px;color:PaleVioletRed;font-size:1000%;text-align:center;">Nothing here</div>
+		<div style="text-align:center;"><a href="YH.html" style="text-decoration:none;color:PaleVioletRed" target="_blank">tampermonkey(油猴)安装教程</a></div>
+
     </div>
 </div>
+
+
 
 
 <script src="https://cdn.jsdelivr.net/npm/jquery/dist/jquery.min.js"></script>
