--- a/web.html
+++ b/web.html
@@ -38,56 +38,27 @@
 
 
 <div class="circle2" ></div>
-<div class="wz2">
     <div class='p'>
-        <div style="font-family:index;margin-top:-140px;color:PaleVioletRed;font-size:1000%;text-align:center;">LTLT-ECY-Blog</div>
+        <div style="font-family:index;margin-top:-23vh;color:PaleVioletRed;font-size:10em;text-align:center;">LTLT-ECY-Blog</div>
     </div>
-</div>
-<div class="wz1">
-<iframe frameborder="no" border="0" marginwidth="0" marginheight="0" width=330 height=86 src="https://music.163.com/outchain/player?type=2&id=1361213926&auto=1&height=66"></iframe>
-</div>
-
-<div class="wzb1">
-    <div class="bk2">
-	    <div class="wzb2">
-            <div class='p'>
-                <div style="font-family:index;margin-top:-140px;color:PaleVioletRed;font-size:350%;text-align:center;">SQL-Injection</div>
-            </div>
-			<div class='p'>
-			    <div class="wzb3">
-	                <div style="font-family:index;color:PaleVioletRed;font-size:120%;text-align:center;"><a href="nh.html" style="text-decoration:none;color:PaleVioletRed" target="_blank">1.联合注入</a></div>
-                </div>
-			</div>
-			<div class='p'>
-			    <div class="wzb4">
-	                <div style="font-family:index;color:PaleVioletRed;font-size:120%;text-align:center;"><a href="bc.html" style="text-decoration:none;color:PaleVioletRed" target="_blank">2.报错注入</a></div>
-                </div>
-			</div>
-			<div class='p'>
-			    <div class="wzb5">
-	                <div style="font-family:index;color:PaleVioletRed;font-size:120%;text-align:center;"><a href="mz.html" style="text-decoration:none;color:PaleVioletRed" target="_blank">3.盲注</a></div>
-                </div>
-			</div>
-			<div class='p'>
-			  <div class="wzb6">
-                <div style="font-family:index;margin-top:-140px;color:PaleVioletRed;font-size:350%;text-align:center;">XSS</div>
-			  </div>
-            </div>
-			<div class='p'>
-			    <div class="wzb7">
-	                <div style="font-family:index;color:PaleVioletRed;font-size:120%;text-align:center;"><a href="XSS1.html" style="text-decoration:none;color:PaleVioletRed" target="_blank">1.XSS学习笔记（一）</a></div>
-                </div>
-			</div>
-        </div>
-	</div>
-</div>
-
-
+      <div class="wz1">
+        <iframe frameborder="no" border="0" marginwidth="0" marginheight="0" width=330 height=86 src="https://music.163.com/outchain/player?type=2&id=1361213926&auto=1&height=66"></iframe>
+      </div>
+      <div class="wzb1">
+          <div class="bk2">
+              <div class="p">
+		      <div style="color: palevioletred; margin-top:1vh;margin-left: 2vw;font-size: 3em;font-family: index;">SQL-injection</div>
+              <div style="color: palevioletred; margin-top:0vh;margin-left: 3vw;font-size: 1em;font-family: index;"><a href="nh.html" style="text-decoration:none;color:PaleVioletRed" target="_blank">1.联合注入</a></div>
+              <div style="color: palevioletred; margin-top:0vh;margin-left: 3vw;font-size: 1em;font-family: index;"><a href="bc.html" style="text-decoration:none;color:PaleVioletRed" target="_blank">2.报错注入</a></div>
+              <div style="color: palevioletred; margin-top:0vh;margin-left: 3vw;font-size: 1em;font-family: index;"><a href="mz.html" style="text-decoration:none;color:PaleVioletRed" target="_blank">3.盲注</a></div>
+              <div style="color: palevioletred; margin-top:-2vh;margin-left: 2vw;font-size: 3em;font-family: index;">XSS</div>
+              <div style="color: palevioletred; margin-top:0vh;margin-left: 3vw;font-size: 1em;font-family: index;"><a href="XSS1.html" style="text-decoration:none;color:PaleVioletRed" target="_blank">1.XSS学习笔记(一)</a></div>
+              </div>
+	      </div>
+     </div>
 <script src="https://cdn.jsdelivr.net/npm/jquery/dist/jquery.min.js"></script>
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/font-awesome/css/font-awesome.min.css"/>
 <script src="JS/autoload.js"></script>
-
-
 </body>
 </html>
 
