--- a/YH.html
+++ b/YH.html
@@ -124,6 +124,11 @@ background="E1.jpg"
 </div>
 </div>
 </div>
+
+<script src="https://cdn.jsdelivr.net/npm/jquery/dist/jquery.min.js"></script>
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/font-awesome/css/font-awesome.min.css"/>
+<script src="JS/autoload.js"></script>
+
 </body>
 </html>
 
