--- a/tool.html
+++ b/tool.html
@@ -5,7 +5,7 @@
 
 <link rel="Stylesheet" href="CSS/WZC1.css" type="text/css"/>
 <link rel="Stylesheet" href="CSS/wzbkxq.css" type="text/css"/>
-
+<link rel="Stylesheet" href="CSS/TTP.css" type="text/css"/>
 
 </head>
 <style type="text/css">
@@ -15,13 +15,18 @@
 </style>
 
 
-<body 
+<body>
 
-	background="5.jpg"
-    style=" background-repeat:no-repeat ;
-    background-size:100% 100%;
-    background-attachment: fixed;" 
->
+<div class='cb-slideshow'>
+
+<ul style="display=none">
+	<li><span></span></li>
+	<li><span></span></li>
+	<li><span></span></li>
+	<li><span></span></li>
+	<li><span></span></li>
+	<li><span></span></li>
+</ul>
 
 <div class="wzc1">
     <div class='p'>
@@ -30,8 +35,7 @@
 
     </div>
 </div>
-
-
+</div>
 
 
 <script src="https://cdn.jsdelivr.net/npm/jquery/dist/jquery.min.js"></script>
