--- a/web.html
+++ b/web.html
@@ -16,6 +16,7 @@
 <link rel="Stylesheet" href="CSS/WZB7.css" type="text/css"/>
 <link rel="Stylesheet" href="CSS/wzbkxq.css" type="text/css"/>
 <link rel="Stylesheet" href="CSS/BK2.css" type="text/css"/>
+<link rel="Stylesheet" href="CSS/TTP.css" type="text/css"/>
 
 <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no" /> 
 
@@ -28,14 +29,17 @@
 </style>
 
 
-<body 
+<body >
+<div class='cb-slideshow'>
 
-	background="2.jpg"
-    style=" background-repeat:no-repeat ;
-    background-size:100% 100%;
-    background-attachment: fixed;" 
->
-
+<ul style="display=none">
+	<li><span></span></li>
+	<li><span></span></li>
+	<li><span></span></li>
+	<li><span></span></li>
+	<li><span></span></li>
+	<li><span></span></li>
+</ul>
 
 <div class="circle2" ></div>
     <div class='p'>
@@ -56,6 +60,7 @@
               </div>
 	      </div>
      </div>
+</div>
 <script src="https://cdn.jsdelivr.net/npm/jquery/dist/jquery.min.js"></script>
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/font-awesome/css/font-awesome.min.css"/>
 <script src="JS/autoload.js"></script>
