--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
 <link rel="Stylesheet" href="CSS/WZ7.css" type="text/css"/>
 <link rel="Stylesheet" href="CSS/wzbkxq.css" type="text/css"/>
 <link rel="Stylesheet" href="CSS/BK.css" type="text/css"/>
+<link rel="Stylesheet" href="CSS/TTP.css" type="text/css"/>
 
 
 <style type="text/css">
@@ -33,13 +34,18 @@
 </head>
 
 
-<body 
+<body>
 
-	background="1.jpg"
-    style=" background-repeat:no-repeat ;
-    background-size:100% 100%;
-    background-attachment: fixed;" 
->
+<div class='cb-slideshow'>
+
+<ul style="display=none">
+	<li><span></span></li>
+	<li><span></span></li>
+	<li><span></span></li>
+	<li><span></span></li>
+	<li><span></span></li>
+	<li><span></span></li>
+</ul>
 
 
 	<div class='bi'>
@@ -149,7 +155,7 @@ setCookie("counter", visits, now)
 document.write("master召唤次数:" + visits )
 </script>
 </div>
-
+</div>
 
 <script src="https://cdn.jsdelivr.net/npm/jquery/dist/jquery.min.js"></script>
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/font-awesome/css/font-awesome.min.css"/>
