--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 
 <div class='cb-slideshow'>
 
-<ul style="display=none">
+<ul style="display:none">
 	<li><span></span></li>
 	<li><span></span></li>
 	<li><span></span></li>
