--- a/web.html
+++ b/web.html
@@ -32,7 +32,7 @@
 <body >
 <div class='cb-slideshow'>
 
-<ul style="display:none">
+<ul style="list-style:none">
 	<li><span></span></li>
 	<li><span></span></li>
 	<li><span></span></li>
