--- a/tool.html
+++ b/tool.html
@@ -30,7 +30,7 @@
 
 <div class="wzc1">
     <div class='p'>
-        <div style="font-family:index;margin-top:-140px;color:PaleVioletRed;font-size:1000%;text-align:center;">Nothing here</div>
+        <div style="font-family:index;margin-top:-140px;color:PaleVioletRed;font-size:1000%;text-align:center;">Continuous update</div>
 		<div style="text-align:center;"><a href="YH.html" style="text-decoration:none;color:PaleVioletRed" target="_blank">tampermonkey(油猴)安装教程</a></div>
 
     </div>
