--- a/XSS1.html
+++ b/XSS1.html
@@ -3,7 +3,9 @@
 <head>
 <meta charset="UTF-8"> 
 
+<titlt>LTLT二次元Blog-XSS1</titlt>
 
+<link rel="Shortcut Icon" href="favicon.ico" />
 
 <link rel="Stylesheet" href="ZT.css" type="text/css"/>
 <link rel="Stylesheet" href="BKd1.css" type="text/css"/>
