--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <meta charset="UTF-8"> 
 
 
-
+<title>LTLT二次元Blog</title>
 
 <link href="CSS/index.css" type="text/css" rel="stylesheet"/>
 <link href="CSS/animation.css" type="text/css" rel="stylesheet"/>
@@ -21,6 +21,8 @@
 <link rel="Stylesheet" href="CSS/wzbkxq.css" type="text/css"/>
 <link rel="Stylesheet" href="CSS/BK.css" type="text/css"/>
 <link rel="Stylesheet" href="CSS/TTP.css" type="text/css"/>
+
+<link rel="Shortcut Icon" href="favicon.ico" />
 
 
 <style type="text/css">
