--- a/nh.html
+++ b/nh.html
@@ -3,6 +3,10 @@
 <head>
 <meta charset="UTF-8"> 
 
+<title>LTLT二次元Blog-Sql联合注入</title>
+
+<link rel="Shortcut Icon" href="favicon.ico" />
+
 <link rel="Stylesheet" href="ZT.css" type="text/css"/>
 <link rel="Stylesheet" href="BKd1.css" type="text/css"/>
 <link rel="Stylesheet" href="CSS/wzbkxq.css" type="text/css"/>
