--- a/YH.html
+++ b/YH.html
@@ -3,11 +3,13 @@
 <head>
 <meta charset="UTF-8"> 
 
-
+<title>LTLT二次元Blog-油猴</title>
 
 <link rel="Stylesheet" href="ZT.css" type="text/css"/>
 <link rel="Stylesheet" href="BKd1.css" type="text/css"/>
 <link rel="Stylesheet" href="CSS/wzbkxq.css" type="text/css"/>
+
+<link rel="Shortcut Icon" href="favicon.ico" />
 
 </head>
 
