--- a/tool.html
+++ b/tool.html
@@ -3,6 +3,10 @@
 <head>
 <meta charset="UTF-8"> 
 
+<title>LTLT二次元Blog-Tool</title>
+
+<link rel="Shortcut Icon" href="favicon.ico" />
+
 <link rel="Stylesheet" href="CSS/WZC1.css" type="text/css"/>
 <link rel="Stylesheet" href="CSS/wzbkxq.css" type="text/css"/>
 <link rel="Stylesheet" href="CSS/TTP.css" type="text/css"/>
