--- a/web.html
+++ b/web.html
@@ -3,6 +3,9 @@
 <head>
 <meta charset="UTF-8"> 
 
+<title>LTLT二次元Blog-Web</title>
+
+<link rel="Shortcut Icon" href="favicon.ico" />
 
 <link rel="Stylesheet" href="CSS/bgmh2.css" type="text/css"/>
 <link rel="Stylesheet" href="CSS/WZ.css" type="text/css"/>
