--- a/XSS1.html
+++ b/XSS1.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8"> 
 
-<titlt>LTLT二次元Blog-XSS1</titlt>
+<title>LTLT二次元Blog-XSS1</title>
 
 <link rel="Shortcut Icon" href="favicon.ico" />
 
