--- a/index.html
+++ b/index.html
@@ -158,7 +158,11 @@ visits = parseInt(visits) + 1
 setCookie("counter", visits, now)
 document.write("master召唤次数:" + visits )
 </script>
-</div>
+
+</div> 
+
+<div style="margin-top: 20vh;margin-left: 94.3vw;font-size: 0.5em"><a href="http://www.beian.miit.gov.cn/" style="text-decoration:none;color:PaleVioletRed" target="_blank">渝ICP备20004487</a></div>
+
 </div>
 
 <script src="https://cdn.jsdelivr.net/npm/jquery/dist/jquery.min.js"></script>
